deploy.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: jhutar-slack-bot
spec:
  selector:
    app: jhutar-slack-bot
  replicas: 1
  template:
    metadata:
      labels:
        app: jhutar-slack-bot
    spec:
      containers:
        - name: jhutar-slack-bot
          image: quay.io/rhcloudperfscale/jhutar-slack-bot:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 256Mi
              cpu: 250m
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /usr/src/app/data/
              name: jhutar-slack-bot-pvc
      volumes:
        - name: jhutar-slack-bot-pvc
          persistentVolumeClaim:
            claimName: jhutar-slack-bot-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jhutar-slack-bot-service
spec:
  selector:
    app: jhutar-slack-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jhutar-slack-bot-route
spec:
  path: /
  to:
    kind: Service
    name: jhutar-slack-bot-service
  port:
    targetPort: 8080
